<resources>
    <string name="app_name">Diary</string>
    <string name="empty">Nothing to show</string>
    <string name="label_date">Date</string>
    <string name="label_title">Title</string>
    <string name="label_description">Notes</string>
    <string name="label_add_entry">Add Entry</string>
    <string name="label_modify_entry">Edit Entry</string>
    <string name="button_set_date">Set Date</string>
    <string name="button_save_entry">Save Entry</string>
    <string name="button_update_entry">Update</string>
    <string name="button_delete_entry">Delete</string>
    <string name="title_sort">Sort</string>
    <string name="sort_by_date">By date</string>
    <string name="sort_by_title">By title</string>
    <string name="sort_by_created_at">By timestamp</string>
</resources>
